--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,98 @@
-.App {
-  text-align: center;
+.customer{
+  background: #F0F3F4;
+  box-shadow: 0px 60px 60px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+  height: 850px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.rect21{
+  position: absolute;
+  width: 1040px;
+  height: 505px;
+  left: 351px;
+  top: 128px;
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.rect21 ul{
+  position: absolute;
+  list-style-type: none;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  height: 100%;
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.rect21 ul li{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  float: left;
+  padding: 13px 20px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  font-size: 14px;
+  font-weight: 800;
+  line-height: 21px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.rect21 ul li p{
+  margin-right: 180px;
+}
+
+.rect21 ul li:nth-child(1){
+  padding: 15px 20px;
+  justify-content: space-between;
+}
+
+.rect21 ul li:nth-child(1) h4{
+  position: relative;
+  margin-top: 10px;
+  font-size: 18px;
+  color: #2B83EA;
+}
+
+.line{
+  position: absolute;
+  width: 92px;
+  height: 5px;
+  left: 16px;
+  top: 65px;
+
+  /* Secondary */
+
+  background: #2B83EA;
+  border-radius: 6px;
+}
+
+.rect21 ul li:nth-child(1) button{
+  background: #2B83EA;
+  border: none;
+  border-radius: 5px;
+  width: 162px;
+  height: 40px;
+  color: #F0F3F4;
+  outline: none;
+}
+
+.rect21 ul li:nth-child(2){
+  height: 50px;
+}
+
+.rect21 ul li:nth-child(3){
+  background-color: #F9F9F9;
+  font-weight: 800;
+  font-size: 18px;
+}
+
+.rect21 ul li:nth-child(3) h5:nth-child(1){
+  margin-right: 224px;
+}
+.rect21 ul li:nth-child(3) h5:nth-child(2){
+  margin-right: 141px;
+}
+.rect21 ul li:nth-child(3) h5:nth-child(3){
+  margin-right: 255px;
 }
